# online-fruit-marketplace

./: CNAME  README.md  package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
.github/workflows/: build.yml  gh-pages.yml
docs/: README.md  architecture-diagrams.ipynb
products/: 1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
website/: Cargo.toml  Makefile.toml  index.html
website/data/products/: products.json
website/src/: api.rs  app.rs  lib.rs  routes.rs  types.rs
website/src/components/: atc_button.rs  navbar.rs  product_card.rs
website/src/pages/: home.rs  mod.rs  product_detail.rs
