[package]
name = "online-fruit-marketplace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
reqwasm = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.6"
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
yew = "0.19.3"
yew-router = "0.16.0"

[dependencies.wee_alloc]
version = "0.4.5"
optional = true
default-features = false

[features]
default = ["wee_alloc"]
